--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <p>La rondache officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
       <p class="price">7 € la rondache (+ 2 € de frais de port)</p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
-      <a href="mailto:votre.email@example.com?subject=Commande rondache BR MIONS" class="cta">Commander par email</a>
+      <a href="mailto:maxmulliez@hotmail.fr?subject=Commande rondache BR MIONS" class="cta">Commander par email</a>
       <p style="margin-top: 30px; font-style: italic;">Venir en MP pour les détails si vous avez eu le lien via Facebook.</p>
     </div>
   </div>
@@ -75,3 +75,4 @@
   </footer>
 </body>
 </html>
+
