--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       text-decoration: none;
       border-radius: 5px;
     }
+    .description {
+      text-align: left;
+      margin-top: 40px;
+    }
     footer {
       text-align: center;
       font-size: 0.9em;
@@ -68,6 +72,19 @@
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
       <a href="mailto:maxmulliez@hotmail.fr?subject=Commande rondache BR MIONS" class="cta">Commander par email</a>
       <p style="margin-top: 30px; font-style: italic;">Venir en MP pour les détails si vous avez eu le lien via Facebook.</p>
+
+      <div class="description">
+        <h2>Description héraldique</h2>
+        <p>
+          La rondache, sur fond bleu et noir, couleurs de la Gendarmerie Nationale, comporte en son centre une araignée noire avec sa toile blanche avec une menotte à une patte évoquant le travail des enquêteurs face aux mis en cause. Elle porte sur sa base le blason de la ville de Mions, siège de l'unité. Elle présente sur sa partie gauche le symbole de l'officier de police judiciaire, qualification intrinsèque de l'unité et symbole d'appartenance à la Gendarmerie. L'ensemble est entouré d'un liseré bicolore or et bleu.
+        </p>
+        <p>
+          Elle présente sur la partie extérieure une couronne noire portant en son chef la mention « BRIGADE DE RECHERCHES » de couleur blanche, faisant ainsi référence à l'appartenance de l'unité au sein de l'institution, et en sa pointe l'inscription en lettres blanches « MIONS », désignant le lieu d'implantation de l'unité.
+        </p>
+        <p>
+          Le tout est bordé par un liseré bicolore bleu et or.
+        </p>
+      </div>
     </div>
   </div>
   <footer>
