--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rondache BR MIONS</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -29,6 +30,23 @@
       display: block;
       margin: 0 auto 20px;
       max-width: 250px;
+      cursor: pointer;
+    }
+    .lightbox {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.8);
+      justify-content: center;
+      align-items: center;
+    }
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
     }
     .content {
       text-align: center;
@@ -47,7 +65,7 @@
       text-decoration: none;
       border-radius: 5px;
     }
-    .description {
+    .description, .terms, .legal {
       text-align: left;
       margin-top: 40px;
     }
@@ -57,6 +75,26 @@
       margin-top: 40px;
       color: #777;
     }
+    form {
+      margin-top: 30px;
+      text-align: left;
+    }
+    form input, form select, form textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      margin-bottom: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    form button {
+      padding: 10px 20px;
+      background-color: #0f2743;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -65,7 +103,10 @@
     <p>Brigade de Recherches de MIONS (RHÔNE)</p>
   </div>
   <div class="container">
-    <img src="rondache-br-mions.png" alt="Rondache BR MIONS" class="logo">
+    <img src="rondache-br-mions.png" alt="Rondache BR MIONS" class="logo" onclick="document.getElementById('lightbox').style.display='flex'">
+    <div id="lightbox" class="lightbox" onclick="this.style.display='none'">
+      <img src="rondache-br-mions.png" alt="Rondache zoom">
+    </div>
     <div class="content">
       <p>La rondache officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
       <p class="price">7 € la rondache (+ 2 € de frais de port)</p>
@@ -85,6 +126,21 @@
           Le tout est bordé par un liseré bicolore bleu et or.
         </p>
       </div>
+
+      <div class="terms">
+        <h2>Conditions de vente</h2>
+        <ul>
+          <li>Expédition sous 5 à 10 jours après réception du paiement</li>
+          <li>Vente à but non lucratif réservée aux membres de la gendarmerie et collectionneurs</li>
+          <li>Pas de retour sauf défaut de fabrication</li>
+        </ul>
+      </div>
+
+      <div class="legal">
+        <h2>Mentions légales</h2>
+        <p>Cette vente est effectuée à titre personnel, sans bénéfice, dans le respect du cadre institutionnel de la Gendarmerie Nationale. Aucun usage détourné ou commercial n’est autorisé.</p>
+      </div>
+
     </div>
   </div>
   <footer>
@@ -92,4 +148,3 @@
   </footer>
 </body>
 </html>
-
