--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <p class="price">7 € la rondache (+ 2 € de frais de port)</p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
       <a href="mailto:maxmulliez@hotmail.fr?subject=Commande rondache BR MIONS" class="cta">Commander par email</a>
-      <p style="margin-top: 30px; font-style: italic;">Venir en MP pour les détails si vous avez eu le lien via Facebook.</p>
+      <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails si vous avez eu le lien via Facebook.</p>
       <div class="description">
         <h2>Description héraldique</h2>
         <p>
@@ -157,8 +157,8 @@
       <div class="terms">
         <h2>Conditions de vente</h2>
         <ul>
-          <li>Expédition sous 5 à 10 jours après réception du paiement</li>
-          <li>Vente à but non lucratif réservée aux membres de la gendarmerie et collectionneurs</li>
+          <li>Expédition sous 1 à 3 jours après réception du paiement</li>
+          <li>Vente réservée aux membres de la gendarmerie, retraités, collectionneurs et passionnés</li>
           <li>Pas de retour sauf défaut de fabrication</li>
         </ul>
       </div>
@@ -169,6 +169,9 @@
 
         <label for="email">Email</label>
         <input type="email" name="email" required>
+
+        <label for="telephone">Téléphone</label>
+        <input type="telephone" name="telephone" required>
 
         <label for="address">Adresse postale</label>
         <textarea name="address" rows="3" required></textarea>
@@ -191,17 +194,17 @@
       </form>
 
       <div id="success-message" class="success-message">
-        Merci, votre commande a bien été envoyée. Vous recevrez une confirmation par email sous peu.
+        Merci, votre demande a bien été envoyée. Vous recevrez une confirmation par email sous peu.
       </div>
       <div class="legal">
         <h2>Mentions légales</h2>
-        <p>Cette vente est effectuée à titre personnel, sans bénéfice, dans le respect du cadre institutionnel de la Gendarmerie Nationale. Aucun usage détourné ou commercial n’est autorisé.</p>
+        <p>Cette vente est effectuée à titre personnel, dans le respect du cadre institutionnel de la Gendarmerie Nationale. Aucun usage détourné ou commercial n’est autorisé.</p>
       </div>
 
     </div>
   </div>
   <footer>
-    &copy; 2025 Brigade de Recherches de MIONS – Rondache à but non lucratif
+    &copy; 2025 Brigade de Recherches de MIONS
   </footer>
 </body>
 </html>
