--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <li>Pas de retour sauf défaut de fabrication</li>
         </ul>
       </div>
-  <form action="https://formspree.io/f/xqkryeal" method="POST">
+  <form action="https://formspree.io/f/mgvkjeor" method="POST">
         <h2>Commander en ligne</h2>
         <label for="name">Nom complet</label>
         <input type="text" name="name" required>
