--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
   <div class="header">
     <h1>RONDACHE OFFICIELLE</h1>
-    <p>Brigade de Recherches de MIONS (RHÔNE)</p>
+    <h1>Brigade de Recherches de MIONS (RHÔNE)</h1>
   </div>
   <div class="container">
     <img src="rondache-br-mions.png" alt="Rondache BR MIONS" class="logo" onclick="document.getElementById('lightbox').style.display='flex'">
