--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
       <p>La rondache officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
       <p class="price">7 € la rondache (+ 2 € de frais de port)</p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
+      <p>Pour toute commande, bien vouloir remplir le formulaire de contact, je reviendrais vers vous pour les modalités de paiement avant envoi</p>
       <a href="mailto:maxmulliez@hotmail.fr?subject=Commande rondache BR MIONS" class="cta">Commander par email</a>
-      <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails si vous avez eu le lien via Facebook.</p>
+      <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails.</p>
       <div class="description">
         <h2>Description héraldique</h2>
         <p>
