--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </ul>
       </div>
   <form action="https://formspree.io/f/mgvkjeor" method="POST">
-        <h2>Commander en ligne</h2>
+        <h2>Demander votre commande</h2>
         <label for="name">Nom complet</label>
         <input type="text" name="name" required>
 
