--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <label for="quantity">Quantité souhaitée</label>
         <input type="number" name="quantity" min="1" required>
 
-        <label for="payment">Mode de paiement</label>
+        <label for="payment">Mode de paiement souhaité</label>
         <select name="payment" required>
           <option value="Chèque">Chèque</option>
           <option value="Virement">Virement</option>
