--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <label for="telephone">Téléphone</label>
         <input type="telephone" name="telephone" required>
 
-        <label for="address">Adresse postale</label>
+        <label for="address">Adresse postale pour l'envoi</label>
         <textarea name="address" rows="3" required></textarea>
 
         <label for="quantity">Quantité souhaitée</label>
