--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <label for="message">Message complémentaire (facultatif)</label>
         <textarea name="message" rows="3"></textarea>
 
-        <button type="submit">Envoyer la commande</button>
+        <button type="submit">Envoyer la demande</button>
       </form>
 
       <div id="success-message" class="success-message">
