--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
       <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails.</p>
       <div class="description">
         <h2>Description héraldique</h2>
+    <div class="content">
         <p>
           La rondache, sur fond bleu et noir, couleurs de la Gendarmerie Nationale, comporte en son centre une araignée noire avec sa toile blanche avec une menotte à une patte évoquant le travail des enquêteurs face aux mis en cause. Elle porte sur sa base le blason de la ville de Mions, siège de l'unité. Elle présente sur sa partie gauche le symbole de l'officier de police judiciaire, qualification intrinsèque de l'unité et symbole d'appartenance à la Gendarmerie. L'ensemble est entouré d'un liseré bicolore or et bleu.
         </p>
