--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <p>La rondache officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
       <p class="price"><strong>7 € la rondache (+ 2 € de frais de port)</strong></p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
-      <p>Pour toute commande, bien vouloir remplir le formulaire de contact, je reviendrais vers vous pour les modalités de paiement avant envoi.</p>
+      <p><strong>Pour toute commande, bien vouloir remplir le formulaire de contact, je reviendrais vers vous pour les modalités de paiement avant envoi.</strong></p>
       <p style="margin-top: 30px; font-style: italic;">Me contacter pour les détails.</p>
       <div class="description">
         <h2>Description héraldique</h2>
