--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <div class="header">
     <h1>RONDACHE OFFICIELLE</h1>
     <h1>Brigade de Recherches de MIONS</h1>
-    <h1></h1>(RHÔNE)</h1>
+    <h1>(RHÔNE)</h1>
   </div>
   <div class="container">
     <img src="rondache-br-mions.png" alt="Rondache BR MIONS" class="logo" onclick="document.getElementById('lightbox').style.display='flex'">
