--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <img src="rondache-br-mions.png" alt="Rondache zoom">
     </div>
     <div class="content">
-      <p>La rondache officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
+      <p>La rondache <strong>brodée</strong> officielle de la Brigade de Recherches de MIONS est disponible à la vente pour les gendarmes, passionnés et collectionneurs.</p>
       <p class="price"><strong>7 € la rondache (+ 2 € de frais de port)</strong></p>
       <p>Paiement accepté par chèque, virement, PayPal ou Paylib.</p>
       <p><strong>Pour toute commande, bien vouloir remplir le formulaire de contact, je reviendrais vers vous pour les modalités de paiement avant envoi.</strong></p>
