--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
       </div>
       <div class="legal">
         <h2>Mentions légales</h2>
-        <p>Cette vente est effectuée à titre personnel, dans le respect du cadre institutionnel de la Gendarmerie Nationale. Aucun usage détourné ou commercial n’est autorisé.</p>
+        <p>Cette vente est effectuée à titre personnel, dans le respect du cadre institutionnel de la Gendarmerie Nationale.</p>
+        <p>Aucun usage détourné ou commercial n’est autorisé.</p>
       </div>
 
     </div>
