--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
     <h1>RONDACHE OFFICIELLE</h1>
     <h1>Brigade de Recherches de MIONS</h1>
     <h1>(RHÔNE)</h1>
+    <img src="logo-droite.png" alt="Logo droite" class="header-logo right">
 </div>
   </div>
   <div class="container">
