--- a/index.html
+++ b/index.html
@@ -17,39 +17,25 @@
       color: white;
       padding: 20px;
       text-align: center;
- }
-    .header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      background-color: #0f2743;
-      color: white;
-      padding: 20px;
-      flex-wrap: wrap;
-    }
+.header {
+  position: relative;
+  background-color: #0f2743;
+  color: white;
+  padding: 40px 20px;
+  text-align: center;
+}
 
-    .header-logo {
-      height: 60px;
-      width: auto;
-    }
+.header-logo {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  height: 60px;
+  width: auto;
+}
 
-    .header-text {
-      flex: 1;
-      text-align: center;
-      min-width: 250px;
-    }
-
-    .header-text h1 {
-      margin: 5px 0;
-    }
-
-    /* Responsive option: hide side logos on small screens */
-    @media (max-width: 600px) {
-      .header-logo {
-        display: none;
-      }
-    }
-
+.header-text h1 {
+  margin: 5px 0;
+}
     }
     .container {
       max-width: 900px;
