--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
   <title>Rondache BR MIONS</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
-    }
-    .header {
-      background-color: #0f2743;
-      color: white;
-      padding: 20px;
-      text-align: center;
+  body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+}
 .header {
   position: relative;
   background-color: #0f2743;
@@ -24,7 +19,6 @@
   padding: 40px 20px;
   text-align: center;
 }
-
 .header-logo {
   position: absolute;
   top: 20px;
@@ -32,107 +26,112 @@
   height: 150px;
   width: auto;
 }
-
 .header-text h1 {
   margin: 5px 0;
 }
-    }
-    .container {
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 20px;
-      background-color: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .logo {
-      display: block;
-      margin: 0 auto 20px;
-      max-width: 400px;
-      cursor: pointer;
-    }
-    .lightbox {
-      display: none;
-      position: fixed;
-      z-index: 999;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.8);
-      justify-content: center;
-      align-items: center;
-    }
-    .lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-    }
-    .content {
-      text-align: center;
-    }
-    .price {
-      font-size: 1.4em;
-      color: #0f2743;
-      margin: 20px 0;
-    }
-    .cta {
-      display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #0f2743;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-    .description, .terms, .legal {
-      text-align: left;
-      margin-top: 40px;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9em;
-      margin-top: 40px;
-      color: #777;
-    }
-    form {
-      margin-top: 30px;
-      text-align: left;
-    }
-    form input, form select, form textarea {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      margin-bottom: 20px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    form button {
-      padding: 10px 20px;
-      background-color: #0f2743;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .success-message {
-      display: none;
-      margin-top: 20px;
-      padding: 15px;
-      background-color: #d4edda;
-      color: #155724;
-      border: 1px solid #c3e6cb;
-      border-radius: 5px;
-    }
-    .payment-icons {
-      margin-top: 10px;
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-    }
-    .payment-icons img {
-      width: 40px;
-      height: auto;
-    }
+.container {
+  max-width: 900px;
+  margin: 30px auto;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.logo {
+  display: block;
+  margin: 0 auto 20px;
+  max-width: 400px;
+  cursor: pointer;
+}
+.lightbox {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  justify-content: center;
+  align-items: center;
+}
+.lightbox img {
+  max-width: 90%;
+  max-height: 90%;
+}
+.content {
+  text-align: center;
+}
+.price {
+  font-size: 1.4em;
+  color: #0f2743;
+  margin: 20px 0;
+}
+.cta {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #0f2743;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.description, .terms, .legal {
+  text-align: left;
+  margin-top: 40px;
+}
+footer {
+  text-align: center;
+  font-size: 0.9em;
+  margin-top: 40px;
+  color: #777;
+}
+form {
+  margin-top: 30px;
+  text-align: left;
+}
+form input, form select, form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+form button {
+  padding: 10px 20px;
+  background-color: #0f2743;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.success-message {
+  display: none;
+  margin-top: 20px;
+  padding: 15px;
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+}
+.payment-icons {
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+.payment-icons img {
+  width: 40px;
+  height: auto;
+}
+
+/* Media query pour cacher les logos sur mobile */
+@media (max-width: 767px) {
+  .header-logo {
+    display: none;
+  }
+}
   </style>
   <script>
     window.addEventListener("DOMContentLoaded", function () {
