--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Rondache BR MIONS</title>
   <link rel="icon" type="image/png" href="favicon.png">
   <style>
-  body {
+body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
   margin: 0;
@@ -25,6 +25,12 @@
   left: 40px;
   height: 150px;
   width: auto;
+}
+/* Positionne le logo de droite à droite */
+.header-logo.right {
+  left: auto;    /* annule left */
+  right: 40px;   /* positionne à 40px du bord droit */
+  top: 20px;
 }
 .header-text h1 {
   margin: 5px 0;
@@ -132,6 +138,7 @@ form button {
     display: none;
   }
 }
+
   </style>
   <script>
     window.addEventListener("DOMContentLoaded", function () {
