--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   <nav class="navbar">
     <a href="#description">Description</a>
     <a href="#terms">Conditions</a>
-    <a href="#form">Commande</a>
+    <a href="#form">Demandez votre Commande</a>
   </nav>
 
   <div class="container">
