--- a/index.html
+++ b/index.html
@@ -324,7 +324,16 @@
         <textarea name="message" rows="3"></textarea>
 
         <!-- Mail de confirmation automatique -->
-        <input type="hidden" name="_autoresponse" value="Merci pour votre commande. Nous reviendrons vers vous rapidement avec les modalités de paiement.">
+       <input type="hidden" name="_autoresponse" value="Bonjour,
+
+Merci pour votre demande de commande de la rondache officielle de la Brigade de Recherches de MIONS (Rhône).
+
+Nous reviendrons vers vous rapidement par email pour vous expliquer les modalités de paiement (PayPal, Paylib, virement ou chèque) et organiser l’envoi de votre commande.
+
+À très bientôt et merci pour votre intérêt !
+
+Cordialement,  
+L’équipe de la BR de MIONS">
 
         <button type="submit">Envoyer la demande</button>
       </form>
